# metadata-updater

./: .gitignore  pyproject.toml
.github/workflows/: update.yml
metadata/: serials.json
metadata/0/: 0.json
metadata/0/-/: 0-0-1.json  0-0.json  0-618.json  0-core-client.json  0-orchestrator.json
metadata/0/0/: 000.json  00101s.json  00print-lol.json  00smalinux.json
metadata/0/1/: 01-distributions.json  0101.json  01changer.json  01d61084-d29e-11e9-96d1-7c5cf84ffe8e.json
metadata/0/2/: 021.json  024travis-test024.json  02exercicio.json
metadata/0/4/: 0411-test.json
metadata/0/8/: 0805nexter.json
metadata/0/f/: 0fela.json
metadata/0/h/: 0html.json
metadata/0/i/: 0imap.json
metadata/0/l/: 0lever-so.json  0lever-utils.json
metadata/0/p/: 0proto.json
metadata/0/r/: 0rest.json  0rss.json
metadata/0/w/: 0wdg9nbmpm.json  0wneg.json
metadata/0/x/: 0x-contract-addresses.json  0x-contract-artifacts.json  0x-contract-wrappers.json  0x-json-schemas.json  0x-middlewares.json  0x-order-utils.json  0x-python.json  0x-sra-client.json  0x-web3.json  0x01-autocert-dns-aliyun.json  0x01-cubic-sdk.json  0x01-letsencrypt.json  0x10c-asm.json  0x20bf.json  0x2nac0nda.json  0xmpp.json
metadata/1/: 1.json
metadata/1/-/: 1-test-package.json
metadata/1/0/: 10-8moshpdf.json  100bot.json  1011903677-siddharth-topsis.json  101703048-topsis.json  (+48 more)
metadata/5/: 5.json
metadata/a/: a.json
metadata/b/: b.json
metadata/d/: d.json
metadata/j/: j.json
metadata/m/: m.json
metadata/t/: t.json
src/metadata_updater/: __version__.py  changelog.py  updater.py
(+23064 files in other folders)
