[tool.poetry]
name = "metadata-updater"
version = "0.1.0"
description = ""
authors = ["Sébastien Eustace <sebastien@eustace.io>"]
license = "MIT"
readme = "README.md"
packages = [{include = "metadata_updater", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
cleo = "^2.0.1"
poetry = "^1.5.0"
packaging = "^23.1"
pendulum = "^2.1.2"
tqdm = "^4.65.0"


[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.scripts]
updater = "metadata_updater.console.application:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
